project(libpathfortran)

SET(PATHSCALE_PATHFORTRAN_C_SRCS  "nlspath.c"
				"non_qk.c"
				"segv.c"
				"stacksize.c"
				"../libfi/array/all_gen.c"
				"../libfi/array/any_gen.c"
				"../libfi/array/count_gen.c"
				"../libfi/array/cshift_gen.c"
				"../libfi/array/eoshift_gen.c"
				"../libfi/array/maxloc_gen.c"
				"../libfi/array/maxval0_gen.c"
				"../libfi/array/maxval_gen.c"
				"../libfi/array/minloc_gen.c"
				"../libfi/array/minval0_gen.c"
				"../libfi/array/minval_gen.c"
				"../libfi/array/pack_gen.c"
				"../libfi/prodsum/prod0_gen.c"
				"../libfi/prodsum/prod_gen.c"
				"../libfi/array/reshape_gen.c"
				"../libfi/array/spread_gen.c"
				"../libfi/prodsum/sum0_gen.c"
				"../libfi/prodsum/sum_gen.c"
				"../libfi/array/transfer_gen.c"
				"../libfi/array/trans_gen.c"
				"../libfi/array/unpack_gen.c"
				"../libf/fort/end.c"
				"../libf/fio/backspace.c"
				"../libf/fio/endfile.c"
				"../libf/fio/globals.c"
				"../libf/fio/inquire.c"
				"../libf/fio/lread.c"
				"../libf/fio/rdfmt.c"
				"../libf/fio/rewind.c"
				"../libfi/char/char.c"
				"../libf/fio/fork.c"
				"../libf/fio/fseek.c"
				"../libf/fio/ftell.c"
				"../libf/fio/open.c"
				"../libf/fort/pause.c"
				"../libf/fio/util.c"
				"../libcsup/gen/memwcpy_c.c"
				"../libcsup/gen/strnrstrn.c"
				"../libcsup/gen/strnstrn.c"
				"../libcsup/msgnew/catgetmsg.c"
				"../libcsup/msgnew/catmsgfmt.c"
				"../libf/fio/cls.c"
				"../libf/fio/cntigchk.c"
				"../libf/fio/dopexfer.c"
				"../libf/fio/dsetpos.c"
				"../libf/fio/dumppfmt.c"
				"../libf/fio/f77wrappers.c"
				"../libf/fio/fcleanup.c"
				"../libf/fio/fcontext.c"
				"../libf/fio/ferror.c"
				"../libf/fio/fgetc.c"
				"../libf/fio/finit.c"
				"../libf/fio/flush.c"
				"../libf/fio/fmtchk.c"
				"../libf/fio/fmtparse.c"
				"../libf/fio/fnum.c"
				"../libf/fio/fopn.c"
				"../libf/fio/fortunit.c"
				"../libf/fio/fputc.c"
				"../libf/fio/frch.c"
				"../libf/fio/frwd.c"
				"../libf/fio/fstat.c"
				"../libf/fio/fstring.c"
				"../libf/fio/fwarn.c"
				"../libf/fio/fwch.c"
				"../libf/fio/fwwd.c"
				"../libf/fio/getdcparam.c"
				"../libf/fio/iconvtab.c"
				"../libf/fio/impopen.c"
				"../libf/fio/initunit.c"
				"../libf/fio/inq.c"
				"../libf/fio/inqil.c"
				"../libf/fio/iochunk.c"
				"../libf/fio/isatty.c"
				"../libf/fio/length.c"
				"../libf/fio/lu2s.c"
				"../libf/fio/lwrite.c"
				"../libf/fio/numblks.c"
				"../libf/fio/oconvtab.c"
				"../libf/fio/openutil.c"
				"../libf/fio/opn.c"
				"../libf/fio/parse.c"
				"../libf/fio/parsfmt.c"
				"../libf/fio/rb.c"
				"../libf/fio/rdunf.c"
				"../libf/fio/rf.c"
				"../libf/fio/rf90.c"
				"../libf/fio/rnl90.c"
				"../libf/fio/rnl90to77.c"
				"../libf/fio/rnldata.c"
				"../libf/fio/rnlutil.c"
				"../libf/fio/ru.c"
				"../libf/fio/ru90.c"
				"../libf/fio/s2ub.c"
				"../libf/fio/s2ul.c"
				"../libf/fio/s2uo.c"
				"../libf/fio/s2uz.c"
				"../libf/fio/scatgath.c"
				"../libf/fio/setbuf.c"
				"../libf/fio/setstride.c"
				"../libf/fio/stats.c"
				"../libf/fio/tables.c"
				"../libf/fio/ttynam.c"
				"../libf/fio/unit.c"
				"../libf/fio/unitbksp.c"
				"../libf/fio/unitclose.c"
				"../libf/fio/unitseek.c"
				"../libf/fio/unittrunc.c"
				"../libf/fio/wb.c"
				"../libf/fio/wf.c"
				"../libf/fio/wf90.c"
				"../libf/fio/wnl90.c"
				"../libf/fio/wnl90to77.c"
				"../libf/fio/wnlutil.c"
				"../libf/fio/wrfmt.c"
				"../libf/fio/wrunf.c"
				"../libf/fio/wu.c"
				"../libf/fio/wu90.c"
				"../libf/fio/xarg.c"
				"../libf/fort/allocation.c"
				"../libf/fort/argchck.c"
				"../libf/fort/bounds_chk.c"
				"../libf/fort/conform_chk.c"
				"../libf/fort/f90abort.c"
				"../libf/fort/libflevel.c"
				"../libf/fort/ptrchk.c"
				"../libf/fort/stop.c"
				"../libf/pxf/ipxfargc.c"
				"../libf/pxf/ipxfwexitstatus.c"
				"../libf/pxf/ipxfwstopsig.c"
				"../libf/pxf/ipxfwtermsig.c"
				"../libf/pxf/pxfaccess.c"
				"../libf/pxf/pxfaintget.c"
				"../libf/pxf/pxfalarm.c"
				"../libf/pxf/pxfcfgetospeed.c"
				"../libf/pxf/pxfchdir.c"
				"../libf/pxf/pxfchmod.c"
				"../libf/pxf/pxfchown.c"
				"../libf/pxf/pxfchroot.c"
				"../libf/pxf/pxfclearenv.c"
				"../libf/pxf/pxfclose.c"
				"../libf/pxf/pxfclosedir.c"
				"../libf/pxf/pxfconst.c"
				"../libf/pxf/pxfcreat.c"
				"../libf/pxf/pxfctermid.c"
				"../libf/pxf/pxfdup.c"
				"../libf/pxf/pxfestrget.c"
				"../libf/pxf/pxfexecv.c"
				"../libf/pxf/pxfexecve.c"
				"../libf/pxf/pxfexecvp.c"
				"../libf/pxf/pxffastexit.c"
				"../libf/pxf/pxffcntl.c"
				"../libf/pxf/pxffileno.c"
				"../libf/pxf/pxffork.c"
				"../libf/pxf/pxfget.c"
				"../libf/pxf/pxfgetarg.c"
				"../libf/pxf/pxfgetcwd.c"
				"../libf/pxf/pxfgetegid.c"
				"../libf/pxf/pxfgetenv.c"
				"../libf/pxf/pxfgeteuid.c"
				"../libf/pxf/pxfgetgid.c"
				"../libf/pxf/pxfgetgrgid.c"
				"../libf/pxf/pxfgetgrnam.c"
				"../libf/pxf/pxfgetgroups.c"
				"../libf/pxf/pxfgetlogin.c"
				"../libf/pxf/pxfgetpgrp.c"
				"../libf/pxf/pxfgetpid.c"
				"../libf/pxf/pxfgetppid.c"
				"../libf/pxf/pxfgetpwnam.c"
				"../libf/pxf/pxfgetpwuid.c"
				"../libf/pxf/pxfgetuid.c"
				"../libf/pxf/pxfisatty.c"
				"../libf/pxf/pxfisblk.c"
				"../libf/pxf/pxfischr.c"
				"../libf/pxf/pxfisdir.c"
				"../libf/pxf/pxfisfifo.c"
				"../libf/pxf/pxfisreg.c"
				"../libf/pxf/pxfkill.c"
				"../libf/pxf/pxflink.c"
				"../libf/pxf/pxflocaltime.c"
				"../libf/pxf/pxflseek.c"
				"../libf/pxf/pxfmkfifo.c"
				"../libf/pxf/pxfopen.c"
				"../libf/pxf/pxfopendir.c"
				"../libf/pxf/pxfpause.c"
				"../libf/pxf/pxfpipe.c"
				"../libf/pxf/pxfread.c"
				"../libf/pxf/pxfreaddir.c"
				"../libf/pxf/pxfrename.c"
				"../libf/pxf/pxfrewinddir.c"
				"../libf/pxf/pxfrmdir.c"
				"../libf/pxf/pxfsetenv.c"
				"../libf/pxf/pxfsetgid.c"
				"../libf/pxf/pxfsetpgid.c"
				"../libf/pxf/pxfsetsid.c"
				"../libf/pxf/pxfsetuid.c"
				"../libf/pxf/pxfsigaddset.c"
				"../libf/pxf/pxfsigdelset.c"
				"../libf/pxf/pxfsigemptyset.c"
				"../libf/pxf/pxfsigfillset.c"
				"../libf/pxf/pxfsigismember.c"
				"../libf/pxf/pxfsigpending.c"
				"../libf/pxf/pxfsigprocmask.c"
				"../libf/pxf/pxfsigsuspend.c"
				"../libf/pxf/pxfsleep.c"
				"../libf/pxf/pxfstat.c"
				"../libf/pxf/pxfstrget.c"
				"../libf/pxf/pxfstructcopy.c"
				"../libf/pxf/pxfstructcreate.c"
				"../libf/pxf/pxfsysconf.c"
				"../libf/pxf/pxfsystem.c"
				"../libf/pxf/pxftcgetattr.c"
				"../libf/pxf/pxftcgetpgrp.c"
				"../libf/pxf/pxftcsendbreak.c"
				"../libf/pxf/pxftcsetpgrp.c"
				"../libf/pxf/pxftime.c"
				"../libf/pxf/pxftimes.c"
				"../libf/pxf/pxfucompare.c"
				"../libf/pxf/pxfumask.c"
				"../libf/pxf/pxfuname.c"
				"../libf/pxf/pxfunlink.c"
				"../libf/pxf/pxfutime.c"
				"../libf/pxf/pxfwait.c"
				"../libf/pxf/pxfwaitpid.c"
				"../libf/pxf/pxfwifexited.c"
				"../libf/pxf/pxfwifsignaled.c"
				"../libf/pxf/pxfwifstopped.c"
				"../libf/pxf/pxfwrite.c"
				"../libf/pxf/table.c"
				"../libF77/_powzi.c"
				"../libF77/and_b.c"
				"../libF77/and_h.c"
				"../libF77/and_l.c"
				"../libF77/and_ll.c"
				"../libF77/b_abs.c"
				"../libF77/b_dim.c"
				"../libF77/b_mod.c"
				"../libF77/b_sign.c"
				"../libF77/bclr_b.c"
				"../libF77/bclr_h.c"
				"../libF77/bclr_l.c"
				"../libF77/bclr_ll.c"
				"../libF77/bext_b.c"
				"../libF77/bext_h.c"
				"../libF77/bext_l.c"
				"../libF77/bext_ll.c"
				"../libF77/bittab.c"
				"../libF77/bset_b.c"
				"../libF77/bset_h.c"
				"../libF77/bset_l.c"
				"../libF77/bset_ll.c"
				"../libF77/btest_b.c"
				"../libF77/btest_h.c"
				"../libF77/btest_l.c"
				"../libF77/btest_ll.c"
				"../libF77/c_abs.c"
				"../libF77/c_cos.c"
				"../libF77/c_div.c"
				"../libF77/c_exp.c"
				"../libF77/c_log.c"
				"../libF77/c_sin.c"
				"../libF77/c_sqrt.c"
				"../libF77/d_abs.c"
				"../libF77/d_acos.c"
				"../libF77/d_acosd.c"
				"../libF77/d_asin.c"
				"../libF77/d_asind.c"
				"../libF77/d_atan.c"
				"../libF77/d_atand.c"
				"../libF77/d_atn2.c"
				"../libF77/d_atn2d.c"
				"../libF77/d_cnjg.c"
				"../libF77/d_cos.c"
				"../libF77/d_cosd.c"
				"../libF77/d_cosh.c"
				"../libF77/d_dim.c"
				"../libF77/d_exp.c"
				"../libF77/d_imag.c"
				"../libF77/d_imagalt.c"
				"../libF77/d_int.c"
				"../libF77/d_lg10.c"
				"../libF77/d_log.c"
				"../libF77/d_mod.c"
				"../libF77/d_nint.c"
				"../libF77/d_prod.c"
				"../libF77/d_sign.c"
				"../libF77/d_sin.c"
				"../libF77/d_sind.c"
				"../libF77/d_sinh.c"
				"../libF77/d_sqrt.c"
				"../libF77/d_tan.c"
				"../libF77/d_tand.c"
				"../libF77/d_tanh.c"
				"../libF77/derf_.c"
				"../libF77/derfc_.c"
				"../libF77/ef1asc_.c"
				"../libF77/ef1cmc_.c"
				"../libF77/erf_.c"
				"../libF77/erfc_.c"
				"../libF77/frts.c"
				"../libF77/gamma.c"
				"../libF77/h_abs.c"
				"../libF77/h_dim.c"
				"../libF77/h_dnnt.c"
				"../libF77/h_indx.c"
				"../libF77/h_len.c"
				"../libF77/h_lentrim.c"
				"../libF77/h_mod.c"
				"../libF77/h_nint.c"
				"../libF77/h_sign.c"
				"../libF77/hl_ge.c"
				"../libF77/hl_gt.c"
				"../libF77/hl_le.c"
				"../libF77/hl_lt.c"
				"../libF77/i_dim.c"
				"../libF77/i_dnnt.c"
				"../libF77/i_indx.c"
				"../libF77/i_len.c"
				"../libF77/i_lentrim.c"
				"../libF77/i_mod.c"
				"../libF77/i_nint.c"
				"../libF77/i_sign.c"
				"../libF77/idint.c"
				"../libF77/irint.c"
				"../libF77/l_dim.c"
				"../libF77/l_dnnt.c"
				"../libF77/l_ge.c"
				"../libF77/l_gt.c"
				"../libF77/l_indx.c"
				"../libF77/l_le.c"
				"../libF77/l_len.c"
				"../libF77/l_lentrim.c"
				"../libF77/l_lt.c"
				"../libF77/l_mod.c"
				"../libF77/l_nint.c"
				"../libF77/l_sign.c"
				"../libF77/lgamma.c"
				"../libF77/lnblnk_.c"
				"../libF77/mclock_.c"
				"../libF77/mvbits.c"
				"../libF77/not_b.c"
				"../libF77/not_h.c"
				"../libF77/not_l.c"
				"../libF77/not_ll.c"
				"../libF77/or_b.c"
				"../libF77/or_h.c"
				"../libF77/or_l.c"
				"../libF77/or_ll.c"
				"../libF77/outstr_.c"
				"../libF77/pow_cc.c"
				"../libF77/pow_ci.c"
				"../libF77/pow_dd.c"
				"../libF77/pow_di.c"
				"../libF77/pow_hh.c"
				"../libF77/pow_ii.c"
				"../libF77/pow_ri.c"
				"../libF77/pow_zi.c"
				"../libF77/pow_zz.c"
				"../libF77/r_abs.c"
				"../libF77/r_acos.c"
				"../libF77/r_acosd.c"
				"../libF77/r_asin.c"
				"../libF77/r_asind.c"
				"../libF77/r_atan.c"
				"../libF77/r_atand.c"
				"../libF77/r_atn2.c"
				"../libF77/r_atn2d.c"
				"../libF77/r_cnjg.c"
				"../libF77/r_cos.c"
				"../libF77/r_cosd.c"
				"../libF77/r_cosh.c"
				"../libF77/r_dim.c"
				"../libF77/r_exp.c"
				"../libF77/r_imag.c"
				"../libF77/r_int.c"
				"../libF77/r_lg10.c"
				"../libF77/r_log.c"
				"../libF77/r_mod.c"
				"../libF77/r_nint.c"
				"../libF77/r_sign.c"
				"../libF77/r_sin.c"
				"../libF77/r_sind.c"
				"../libF77/r_sinh.c"
				"../libF77/r_sqrt.c"
				"../libF77/r_tan.c"
				"../libF77/r_tand.c"
				"../libF77/r_tanh.c"
				"../libF77/ran_.c"
				"../libF77/s_abort.c"
				"../libF77/s_paus.c"
				"../libF77/s_rnge.c"
				"../libF77/s_srng.c"
				"../libF77/s_stop.c"
				"../libF77/shift_b.c"
				"../libF77/shift_h.c"
				"../libF77/shift_l.c"
				"../libF77/shift_ll.c"
				"../libF77/shiftc_b.c"
				"../libF77/shiftc_h.c"
				"../libF77/shiftc_l.c"
				"../libF77/shiftc_ll.c"
				"../libF77/subout.c"
				"../libF77/xor_b.c"
				"../libF77/xor_h.c"
				"../libF77/xor_l.c"
				"../libF77/xor_ll.c"
				"../libF77/z_abs.c"
				"../libF77/z_cos.c"
				"../libF77/z_div.c"
				"../libF77/z_exp.c"
				"../libF77/z_log.c"
				"../libF77/z_sin.c"
				"../libF77/z_sqrt.c"
				"../libfi/array/allocated.c"
				"../libfi/array/copyinout.c"
				"../libfi/array/lbound.c"
				"../libfi/array/shape.c"
				"../libfi/array/size.c"
				"../libfi/array/ubound.c"
				"../libfi/char/adjustl.c"
				"../libfi/char/adjustr.c"
				"../libfi/char/f90_adjustl.c"
				"../libfi/char/f90_adjustr.c"
				"../libfi/char/f90_char.c"
				"../libfi/char/f90_fcd_blank.c"
				"../libfi/char/f90_fcd_cmp_eq.c"
				"../libfi/char/f90_fcd_cmp_gt.c"
				"../libfi/char/f90_fcd_cmp_lt.c"
				"../libfi/char/f90_fcd_copy.c"
				"../libfi/char/f90_ichar.c"
				"../libfi/char/f90_index.c"
				"../libfi/char/f90_len_trim.c"
				"../libfi/char/f90_len.c"
				"../libfi/char/f90_pause.c"
				"../libfi/char/f90_repeat.c"
				"../libfi/char/f90_scan.c"
				"../libfi/char/f90_stop.c"
				"../libfi/char/f90_trim.c"
				"../libfi/char/f90_verify.c"
				"../libfi/char/ichar.c"
				"../libfi/char/index.c"
				"../libfi/char/len_trim.c"
				"../libfi/char/len.c"
				"../libfi/char/repeat.c"
				"../libfi/char/scan.c"
				"../libfi/char/trim.c"
				"../libfi/char/verify.c"
				"../libfi/element/associated.c"
				"../libfi/element/clock.c"
				"../libfi/element/date.c"
				"../libfi/element/f90_clock.c"
				"../libfi/element/f90_date.c"
				"../libfi/element/f90_jdate.c"
				"../libfi/element/idate_f90.c"
				"../libfi/element/irtc.c"
				"../libfi/element/jdate.c"
				"../libfi/element/modulo.c"
				"../libfi/element/rtc.c"
				"../libfi/element/selrealkind.c"
				"../libfi/element/trimlen_f90.c"
				"../libfi/mathlb/ceiling.c"
				"../libfi/mathlb/chtoi.c"
				"../libfi/mathlb/chton.c"
				"../libfi/mathlb/cot.c"
				"../libfi/mathlb/ctoi.c"
				"../libfi/mathlb/cton.c"
				"../libfi/mathlb/dcot.c"
				"../libfi/mathlb/dsign.c"
				"../libfi/mathlb/dtan.c"
				"../libfi/mathlb/exponent.c"
				"../libfi/mathlb/floor.c"
				"../libfi/mathlb/fp_class_d.c"
				"../libfi/mathlb/fp_class_h.c"
				"../libfi/mathlb/fp_class_r.c"
				"../libfi/mathlb/fraction.c"
				"../libfi/mathlb/hcot.c"
				"../libfi/mathlb/hsign.c"
				"../libfi/mathlb/htoi.c"
				"../libfi/mathlb/hton.c"
				"../libfi/mathlb/iabs.c"
				"../libfi/mathlb/ieee_binary_scale_d_i.c"
				"../libfi/mathlb/ieee_binary_scale_d_n.c"
				"../libfi/mathlb/ieee_binary_scale_h_i.c"
				"../libfi/mathlb/ieee_binary_scale_h_n.c"
				"../libfi/mathlb/ieee_binary_scale_r_i.c"
				"../libfi/mathlb/ieee_binary_scale_r_n.c"
				"../libfi/mathlb/ieee_exponent_d.c"
				"../libfi/mathlb/ieee_exponent_h.c"
				"../libfi/mathlb/ieee_exponent_i.c"
				"../libfi/mathlb/ieee_exponent_i1.c"
				"../libfi/mathlb/ieee_exponent_i2.c"
				"../libfi/mathlb/ieee_exponent_n.c"
				"../libfi/mathlb/ieee_exponent_r.c"
				"../libfi/mathlb/ieee_int.c"
				"../libfi/mathlb/ieee_module_support.c"
# This needs -D_GNU_SOURCE
#				"../libfi/mathlb/ieee_next_after.c"
				"../libfi/mathlb/ilen.c"
				"../libfi/mathlb/iso_c_binding_support.c"
				"../libfi/mathlb/itoi.c"
				"../libfi/mathlb/nabs.c"
				"../libfi/mathlb/nearest.c"
				"../libfi/mathlb/nton.c"
				"../libfi/mathlb/random.c"
				"../libfi/mathlb/ransed.c"
				"../libfi/mathlb/rrspacing.c"
				"../libfi/mathlb/rtoi.c"
				"../libfi/mathlb/rton.c"
				"../libfi/mathlb/scale.c"
				"../libfi/mathlb/set_exponent.c"
				"../libfi/mathlb/sign.c"
				"../libfi/mathlb/snglr.c"
				"../libfi/mathlb/spacing.c"
				"../libfi/matrix/matmul_c4c.c"
				"../libfi/matrix/matmul_c4c4.c"
				"../libfi/matrix/matmul_c4i1.c"
				"../libfi/matrix/matmul_c4i2.c"
				"../libfi/matrix/matmul_c4i4.c"
				"../libfi/matrix/matmul_c4j.c"
				"../libfi/matrix/matmul_c4s.c"
				"../libfi/matrix/matmul_c4s4.c"
				"../libfi/matrix/matmul_cc@.c"
				"../libfi/matrix/matmul_cc4.c"
				"../libfi/matrix/matmul_ci1.c"
				"../libfi/matrix/matmul_ci2.c"
				"../libfi/matrix/matmul_ci4.c"
				"../libfi/matrix/matmul_cj@.c"
				"../libfi/matrix/matmul_cs@.c"
				"../libfi/matrix/matmul_cs4.c"
				"../libfi/matrix/matmul_i1c.c"
				"../libfi/matrix/matmul_i1c4.c"
				"../libfi/matrix/matmul_i1i1.c"
				"../libfi/matrix/matmul_i1i2.c"
				"../libfi/matrix/matmul_i1i4.c"
				"../libfi/matrix/matmul_i1j.c"
				"../libfi/matrix/matmul_i1s.c"
				"../libfi/matrix/matmul_i1s4.c"
				"../libfi/matrix/matmul_i2c.c"
				"../libfi/matrix/matmul_i2c4.c"
				"../libfi/matrix/matmul_i2i1.c"
				"../libfi/matrix/matmul_i2i2.c"
				"../libfi/matrix/matmul_i2i4.c"
				"../libfi/matrix/matmul_i2j.c"
				"../libfi/matrix/matmul_i2s.c"
				"../libfi/matrix/matmul_i2s4.c"
				"../libfi/matrix/matmul_i4c.c"
				"../libfi/matrix/matmul_i4c4.c"
				"../libfi/matrix/matmul_i4i1.c"
				"../libfi/matrix/matmul_i4i2.c"
				"../libfi/matrix/matmul_i4i4.c"
				"../libfi/matrix/matmul_i4j.c"
				"../libfi/matrix/matmul_i4s.c"
				"../libfi/matrix/matmul_i4s4.c"
				"../libfi/matrix/matmul_jc@.c"
				"../libfi/matrix/matmul_jc4.c"
				"../libfi/matrix/matmul_ji1.c"
				"../libfi/matrix/matmul_ji2.c"
				"../libfi/matrix/matmul_ji4.c"
				"../libfi/matrix/matmul_jj@.c"
				"../libfi/matrix/matmul_js@.c"
				"../libfi/matrix/matmul_js4.c"
				"../libfi/matrix/matmul_l1l.c"
				"../libfi/matrix/matmul_l1l1.c"
				"../libfi/matrix/matmul_l1l2.c"
				"../libfi/matrix/matmul_l1l4.c"
				"../libfi/matrix/matmul_l2l.c"
				"../libfi/matrix/matmul_l2l1.c"
				"../libfi/matrix/matmul_l2l2.c"
				"../libfi/matrix/matmul_l2l4.c"
				"../libfi/matrix/matmul_l4l.c"
				"../libfi/matrix/matmul_l4l1.c"
				"../libfi/matrix/matmul_l4l2.c"
				"../libfi/matrix/matmul_l4l4.c"
				"../libfi/matrix/matmul_ll@.c"
				"../libfi/matrix/matmul_ll1.c"
				"../libfi/matrix/matmul_ll2.c"
				"../libfi/matrix/matmul_ll4.c"
				"../libfi/matrix/matmul_s4c.c"
				"../libfi/matrix/matmul_s4c4.c"
				"../libfi/matrix/matmul_s4i1.c"
				"../libfi/matrix/matmul_s4i2.c"
				"../libfi/matrix/matmul_s4i4.c"
				"../libfi/matrix/matmul_s4j.c"
				"../libfi/matrix/matmul_s4s.c"
				"../libfi/matrix/matmul_s4s4.c"
				"../libfi/matrix/matmul_sc@.c"
				"../libfi/matrix/matmul_sc4.c"
				"../libfi/matrix/matmul_si1.c"
				"../libfi/matrix/matmul_si2.c"
				"../libfi/matrix/matmul_si4.c"
				"../libfi/matrix/matmul_sj@.c"
				"../libfi/matrix/matmul_ss@.c"
				"../libfi/matrix/matmul_ss4.c"
				"../libfi/subrtn/cpu_time.c"
				"../libfi/subrtn/date_and_time.c"
				"../libfi/subrtn/f90_date_and_time.c"
				"../libfi/subrtn/system_clock.c"
				"../libu/clib/exit.c"
				"../libu/clib/kill.c"
				"../libu/clib/signal.c"
				"../libu/errmsg/lerror.c"
				"../libu/errmsg/lmessage.c"
				"../libu/errmsg/lwarn.c"
				"../libu/ffio/_ffopen.c"
				"../libu/ffio/asgrls.c"
				"../libu/ffio/binhex.c"
				"../libu/ffio/ccaclearpg.c"
				"../libu/ffio/ccaclose.c"
				"../libu/ffio/ccafcntl.c"
				"../libu/ffio/ccaflush.c"
				"../libu/ffio/ccagetblk.c"
				"../libu/ffio/ccagetblkp.c"
				"../libu/ffio/ccaopen.c"
				"../libu/ffio/ccardabuf.c"
				"../libu/ffio/ccaread.c"
				"../libu/ffio/ccaseek.c"
				"../libu/ffio/ccasyncpage.c"
				"../libu/ffio/ccatracker.c"
				"../libu/ffio/ccaweod.c"
				"../libu/ffio/ccawrabuf.c"
				"../libu/ffio/ccawrite.c"
				"../libu/ffio/cchclose.c"
				"../libu/ffio/cchfcntl.c"
				"../libu/ffio/cchgetblk.c"
				"../libu/ffio/cchopen.c"
				"../libu/ffio/cchrdabuf.c"
				"../libu/ffio/cchread.c"
				"../libu/ffio/cchseek.c"
				"../libu/ffio/cchweod.c"
				"../libu/ffio/cchwrabuf.c"
				"../libu/ffio/cchwrite.c"
				"../libu/ffio/class_mr_sds_check.c"
				"../libu/ffio/class_vf_check.c"
				"../libu/ffio/class_vms_check.c"
				"../libu/ffio/convertc.c"
				"../libu/ffio/cosbksp.c"
				"../libu/ffio/cosclose.c"
				"../libu/ffio/cosfcntl.c"
				"../libu/ffio/cosopen.c"
				"../libu/ffio/cospos.c"
				"../libu/ffio/cosread.c"
				"../libu/ffio/cosseek.c"
				"../libu/ffio/coswrite.c"
				"../libu/ffio/evnt_close_diags.c"
				"../libu/ffio/evnt_get_parent_child.c"
				"../libu/ffio/evnt_get_tracker.c"
				"../libu/ffio/evnt_trace_flush.c"
				"../libu/ffio/evntatexit.c"
				"../libu/ffio/evntbksp.c"
				"../libu/ffio/evntclose.c"
				"../libu/ffio/evntfcntl.c"
				"../libu/ffio/evntflush.c"
				"../libu/ffio/evntlistio.c"
				"../libu/ffio/evntopen.c"
				"../libu/ffio/evntread.c"
				"../libu/ffio/evntreada.c"
				"../libu/ffio/evntreadc.c"
				"../libu/ffio/evntseek.c"
				"../libu/ffio/evntweod.c"
				"../libu/ffio/evntweof.c"
				"../libu/ffio/evntwrite.c"
				"../libu/ffio/evntwritea.c"
				"../libu/ffio/evntwritec.c"
				"../libu/ffio/f77bksp.c"
				"../libu/ffio/f77close.c"
				"../libu/ffio/f77fcntl.c"
				"../libu/ffio/f77open.c"
				"../libu/ffio/f77read.c"
				"../libu/ffio/f77write.c"
				"../libu/ffio/fd_open.c"
				"../libu/ffio/ffbksp.c"
				"../libu/ffio/ffclose.c"
				"../libu/ffio/fferr.c"
				"../libu/ffio/fffcntl.c"
				"../libu/ffio/ffflush.c"
				"../libu/ffio/ffnoop.c"
				"../libu/ffio/ffopen.c"
				"../libu/ffio/ffopens.c"
				"../libu/ffio/ffopensg.c"
				"../libu/ffio/ffpos.c"
				"../libu/ffio/ffread.c"
				"../libu/ffio/ffreadc.c"
				"../libu/ffio/ffseek.c"
				"../libu/ffio/ffspec.c"
				"../libu/ffio/ffstrerror.c"
				"../libu/ffio/ffweof.c"
				"../libu/ffio/ffwrite.c"
				"../libu/ffio/ffwritec.c"
				"../libu/ffio/fxrmain.c"
				"../libu/ffio/fxrmisc.c"
				"../libu/ffio/gffcntl.c"
				"../libu/ffio/gfopen.c"
				"../libu/ffio/gfread.c"
				"../libu/ffio/gfwrite.c"
				"../libu/ffio/gvfcntl.c"
				"../libu/ffio/gvopen.c"
				"../libu/ffio/gvread.c"
				"../libu/ffio/gvwrite.c"
				"../libu/ffio/lockclose.c"
				"../libu/ffio/lockfcntl.c"
				"../libu/ffio/lockopen.c"
				"../libu/ffio/lockpos.c"
				"../libu/ffio/lockread.c"
				"../libu/ffio/lockwrite.c"
				"../libu/ffio/parse_data.c"
				"../libu/ffio/set_layer_options.c"
				"../libu/ffio/sqbclose.c"
				"../libu/ffio/sqbfcntl.c"
				"../libu/ffio/sqbopen.c"
				"../libu/ffio/sqbpos.c"
				"../libu/ffio/sqbread.c"
				"../libu/ffio/sqbseek.c"
				"../libu/ffio/sqbweod.c"
				"../libu/ffio/sqbweof.c"
				"../libu/ffio/sqbwrite.c"
				"../libu/ffio/sysasg.c"
				"../libu/ffio/sysclose.c"
				"../libu/ffio/sysfcntl.c"
				"../libu/ffio/syslistio.c"
				"../libu/ffio/syslseek.c"
				"../libu/ffio/sysopen.c"
				"../libu/ffio/sysread.c"
				"../libu/ffio/systrunc.c"
				"../libu/ffio/syswrite.c"
				"../libu/ffio/txtbksp.c"
				"../libu/ffio/txtfcntl.c"
				"../libu/ffio/txtopen.c"
				"../libu/ffio/txtread.c"
				"../libu/ffio/txtwrite.c"
				"../libu/ieg/gchrpck.c"
				"../libu/ieg/ieeetran.c"
				"../libu/ieg/inttran.c"
				"../libu/ieg/mipstran.c"
				"../libu/numconv/mpp/boizu2s.c"
				"../libu/numconv/mpp/defgu2s.c"
				"../libu/numconv/mpp/ncon.c"
				"../libu/numconv/mpp/outputnaninf.c"
				"../libu/numconv/mpp/qqroutines.c"
				"../libu/numconv/mpp/s2uboiz.c"
				"../libu/numconv/mpp/sd2udee.c"
				"../libu/numconv/mpp/sd2udeeq.c"
				"../libu/numconv/mpp/sd2uene.c"
				"../libu/numconv/mpp/sd2ueneq.c"
				"../libu/numconv/mpp/sd2uese.c"
				"../libu/numconv/mpp/sd2uf.c"
				"../libu/numconv/mpp/sd2ufq.c"
				"../libu/numconv/mpp/sd2uge.c"
				"../libu/numconv/mpp/sd2ugeq.c"
				"../libu/util/_string_cmp.c"
				"../libu/util/asnenv.c"
				"../libu/util/asnlib.c"
				"../libu/util/asnparse.c"
				"../libu/util/asnquery.c"
				"../libu/util/asntools.c"
				"../libu/util/c2fcpy.c"
				"../libu/util/cliblevel.c"
				"../libu/util/f2ccpy.c"
				"../libu/util/fsztab.c"
				"../libu/util/ishell.c"
				"../libu/util/mpp/_pack.c"
				"../libu/util/mpp/_unpack.c"
				"../libu/util/mpp/movbit.c"
				"../libu/util/posix/cri_cintrin.c"
				"../libu/util/posix/utilintrin.c"
				"../libu/util/rtc.c"
				"../libu/util/second.c"
				"../libu/util/secondr.c"
				"../libu/util/timef.c"
				"../libU77/abort_.c"
				"../libU77/access_.c"
				"../libU77/alarm_.c"
				"../libU77/bes.c"
				"../libU77/charutil.c"
				"../libU77/chdir_.c"
				"../libU77/chmod_.c"
				"../libU77/cmd_line.c"
				"../libU77/ctime_.c"
				"../libU77/date_.c"
				"../libU77/dbes.c"
				"../libU77/dtime_.c"
				"../libU77/etime_.c"
				"../libU77/exit_.c"
				"../libU77/fdate_.c"
				"../libU77/gerror_.c"
				"../libU77/getarg_.c"
				"../libU77/getcwd_.c"
				"../libU77/getenv_.c"
				"../libU77/getgid_.c"
				"../libU77/getlog_.c"
				"../libU77/getpid_.c"
				"../libU77/getuid_.c"
				"../libU77/gmtime_.c"
				"../libU77/hostnm_.c"
				"../libU77/iargc_.c"
				"../libU77/ierrno_.c"
				"../libU77/irand_.c"
				"../libU77/itime_.c"
				"../libU77/legacy_access_.c"
				"../libU77/legacy_alarm_.c"
				"../libU77/legacy_chdir_.c"
				"../libU77/legacy_chmod_.c"
				"../libU77/legacy_dtime_.c"
				"../libU77/legacy_etime_.c"
				"../libU77/legacy_fdate_.c"
				"../libU77/legacy_getarg_.c"
				"../libU77/legacy_getcwd_.c"
				"../libU77/legacy_getenv_.c"
				"../libU77/legacy_getgid_.c"
				"../libU77/legacy_getlog_.c"
				"../libU77/legacy_getpid_.c"
				"../libU77/legacy_getuid_.c"
				"../libU77/legacy_gmtime_.c"
				"../libU77/legacy_hostnm_.c"
				"../libU77/legacy_iargc_.c"
				"../libU77/legacy_itime_.c"
				"../libU77/legacy_ltime_.c"
				"../libU77/legacy_rename_.c"
				"../libU77/legacy_sleep_.c"
				"../libU77/legacy_stat_.c"
				"../libU77/legacy_symlnk_.c"
				"../libU77/legacy_system_.c"
				"../libU77/legacy_time_.c"
				"../libU77/legacy_unlink_.c"
				"../libU77/link_.c"
				"../libU77/ltime_.c"
				"../libU77/malloc_.c"
				"../libU77/output.c"
				"../libU77/perror_.c"
				"../libU77/putenv_.c"
				"../libU77/qsort_.c"
				"../libU77/rand_.c"
				"../libU77/rename_.c"
				"../libU77/secnds_.c"
				"../libU77/sleep_.c"
				"../libU77/srand_.c"
				"../libU77/stat_.c"
				"../libU77/symlnk_.c"
                "../libU77/sys_ctime.c"
				"../libU77/system_.c"
				"../libU77/time_.c"
				"../libU77/umask_.c"
				"../libU77/unlink_.c"
				"../libU77/wait_.c"
)

SET(PATHSCALE_PATHFORTRAN_F_SRCS
				"../libfi/matrix/jgemmx.F"
				"../libfi/matrix/jsgemmx.F"
				"../libfi/matrix/lgemmx.F"
				"../libF77/c_cosf.F"
				"../libF77/c_divf.F"
				"../libF77/c_expf.F"
				"../libF77/c_logf.F"
				"../libF77/c_sinf.F"
				"../libF77/c_sqrtf.F"
				"../libF77/d_cnjgf.F"
				"../libF77/pow_cif.F"
				"../libF77/pow_clf.F"
				"../libF77/pow_zif.F"
				"../libF77/pow_zlf.F"
				"../libF77/pow_zzf.F"
				"../libF77/r_cnjgf.F"
				"../libF77/z_cosf.F"
				"../libF77/z_divf.F"
				"../libF77/z_expf.F"
				"../libF77/z_logf.F"
				"../libF77/z_sinf.F"
				"../libF77/z_sqrtf.F"
# Only bother building the corresponding foo.F90 source with pathf90 since
# gfortran and friends will not be compatible anyway.
# OMP_LIB.mod
# OMP_LIB_KINDS.mod
# ISO_C_BINDING.mod
# IEEE_EXCEPTIONS.mod
# ISO_FORTRAN_ENV.mod
# IEEE_ARITHMETIC.mod
# IEEE_FEATURES.mod
# Order matters here.. Must have IEEE_EXCEPTIONS.mod before building
# ieee_arithmetic
				"../libfi/mathlb/ieee_exceptions.F90"
				"../libfi/mathlb/ieee_arithmetic.F90"
				"../libfi/mathlb/ieee_features.F90"
				"../libfi/mathlb/iso_c_binding.F90"
				"../libfi/mathlb/iso_fortran_env.F90"
				"../libfi/matrix/c4gemmx.F"
				"../libfi/matrix/c4gemvx.F"
				"../libfi/matrix/cgemmx.F"
				"../libfi/matrix/cgemvx.F"
				"../libfi/matrix/i1gemmx.F"
				"../libfi/matrix/i1i2gemmx.F"
				"../libfi/matrix/i1i4gemmx.F"
				"../libfi/matrix/i1jgemmx.F"
				"../libfi/matrix/i1s4gemmx.F"
				"../libfi/matrix/i1sgemmx.F"
				"../libfi/matrix/i2gemmx.F"
				"../libfi/matrix/i2i4gemmx.F"
				"../libfi/matrix/i2jgemmx.F"
				"../libfi/matrix/i2s4gemmx.F"
				"../libfi/matrix/i2sgemmx.F"
				"../libfi/matrix/i4gemmx.F"
				"../libfi/matrix/i4jgemmx.F"
				"../libfi/matrix/i4s4gemmx.F"
				"../libfi/matrix/i4sgemmx.F"
				"../libfi/matrix/js4gemmx.F"
				"../libfi/matrix/l1gemmx.F"
				"../libfi/matrix/l1l2gemmx.F"
				"../libfi/matrix/l1l4gemmx.F"
				"../libfi/matrix/l1lgemmx.F"
				"../libfi/matrix/l2gemmx.F"
				"../libfi/matrix/l2l4gemmx.F"
				"../libfi/matrix/l2lgemmx.F"
				"../libfi/matrix/l4gemmx.F"
				"../libfi/matrix/l4lgemmx.F"
				"../libfi/matrix/s4gemmx.F"
				"../libfi/matrix/s4gemvx.F"
				"../libfi/matrix/s4sgemmx.F"
				"../libfi/matrix/sgemmx.F"
				"../libfi/matrix/sgemvx.F"
				"../libu/ieg/ia2mips.F"
				"../libu/ieg/mips2ia.F"
)

INCLUDE_DIRECTORIES(
	"../clibinc"
	"../clibinc/cray"
	"../clibroot"
	"../libcsup/include"
	.
	"../include"
	"../libf/include"
	"../libu"
	"../libfi/include"
)

ADD_DEFINITIONS(
	-D_LIBU
	-D_WORD32
	-D_LITTLE_ENDIAN
	-D_LIB_INTERNAL
	-DPLI
	-DI90
	-DFTN90_IO
    -D__C99FEATURES__               # for fpclassify on osol
# Add this for only the gfortran and gcc build, but enable the fortran stuff
# for c source makes a lot of noise
#	-DBUILD_COMPILER_GNU -fcray-pointer -fsecond-underscore -m96bit-long-double
# Add this for pathf90 and psc build
# -Wf,-eQ
#	-Wf,-intrinsic_module_gen
#	-Wf,-intrinsic_module_path=.
)

IF(PATH64_ENABLE_FORTRAN)
add_executable( gen_ieee_cpp_macros  ../libfi/mathlb/gen_ieee_cpp_macros.c)

add_custom_command(
		OUTPUT ${CMAKE_BINARY_DIR}/src/include/ieee_cpp_macros.h
		COMMAND  gen_ieee_cpp_macros > ${CMAKE_BINARY_DIR}/src/include/ieee_cpp_macros.h
		DEPENDS gen_ieee_cpp_macros)

add_dependencies(gen_ieee_cpp_macros switch_fc)

set(PATHF90_FLAGS "-Wf,-eQ -Wf,-intrinsic_module_gen -Wf,-intrinsic_module_path=.")

set_source_files_properties("../libu/util/rtc.c" PROPERTIES COMPILE_DEFINITIONS "_XOPEN_SOURCE;_XOPEN_SOURCE_EXTENDED")

set_source_files_properties(${PATHSCALE_PATHFORTRAN_F_SRCS} PROPERTIES COMPILE_FLAGS ${PATHF90_FLAGS})
set_source_files_properties(../libfi/mathlb/ieee_exceptions.F90 PROPERTIES OBJECT_OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/IEEE_EXCEPTIONS.mod)
set_source_files_properties(../libfi/mathlb/ieee_arithmetic.F90 PROPERTIES OBJECT_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/IEEE_EXCEPTIONS.mod)

#SET(CMAKE_Fortran_IMPLICIT_LINK_LIBRARIES "m;c")


add_library(pathfortran-static STATIC ${PATHSCALE_PATHFORTRAN_C_SRCS} ${PATHSCALE_PATHFORTRAN_F_SRCS} ${CMAKE_BINARY_DIR}/src/include/ieee_cpp_macros.h)

SET_TARGET_PROPERTIES(pathfortran-static PROPERTIES OUTPUT_NAME "pathfortran")

add_library(pathfortran SHARED ${PATHSCALE_PATHFORTRAN_C_SRCS} ${PATHSCALE_PATHFORTRAN_F_SRCS} ${CMAKE_BINARY_DIR}/src/include/ieee_cpp_macros.h)
set_property(TARGET pathfortran PROPERTY LINKER_LANGUAGE C)

set_property(TARGET pathfortran PROPERTY SOVERSION 1)
if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
set_property(TARGET pathfortran PROPERTY LINK_FLAGS -Wl,--version-script="${libpathfortran_SOURCE_DIR}/libpathfortran.vs")
endif()

IF(PATH64_ENABLE_PROFILING)
add_library(pathfortran_p STATIC ${PATHSCALE_PATHFORTRAN_SRCS} ${PATHSCALE_PATHFORTRAN_F_SRCS} ${CMAKE_BINARY_DIR}/src/include/ieee_cpp_macros.h)
set_property(TARGET pathfortran_p PROPERTY COMPILE_FLAGS -pg)
install(TARGETS pathfortran_p  ARCHIVE DESTINATION ${PATH64_LIB_PATH})
ENDIF(PATH64_ENABLE_PROFILING)

add_library(pathfstart STATIC fnord.c ../libf/fio/main.c)


install(TARGETS pathfortran pathfortran-static pathfstart
        LIBRARY DESTINATION ${PATH64_LIB_PATH}
        ARCHIVE DESTINATION ${PATH64_LIB_PATH})

add_custom_command(
    OUTPUT massage.c
    COMMAND awk -f ${CMAKE_CURRENT_SOURCE_DIR}/../libu/errmsg/massage.awk ${CMAKE_CURRENT_SOURCE_DIR}/../clibinc/liberrno.h  > massage.c
    DEPENDS ../libu/errmsg/massage.awk ../clibinc/liberrno.h
)
add_executable(massage massage.c)
add_custom_command(
    OUTPUT numbers.h
    COMMAND massage > numbers.h
    DEPENDS massage
)
add_custom_command(
    OUTPUT lib.msgs
    COMMAND cpp -DKEY -E -traditional -I. ${CMAKE_CURRENT_SOURCE_DIR}/../libu/errmsg/lib.msg > lib.msgs
    DEPENDS numbers.h
)
add_custom_command(
    OUTPUT lib.cat
    COMMAND ${PATHSCALE_SOURCE_DIR}/linux/tools/caterr.${SHELL_EXT} -c lib.cat lib.msgs
    DEPENDS lib.msgs
)
add_custom_target(
    generate_lib_cat ALL
    DEPENDS lib.cat
)


# TODO :
# add custom command and install targets for these
#${CMAKE_CURRENT_BINARY_DIR}/ISO_FORTRAN_ENV.mod
#${CMAKE_CURRENT_BINARY_DIR}/IEEE_ARITHMETIC.mod

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ISO_C_BINDING.mod ${CMAKE_CURRENT_BINARY_DIR}/IEEE_EXCEPTIONS.mod ${CMAKE_CURRENT_BINARY_DIR}/IEEE_FEATURES.mod ${CMAKE_CURRENT_BINARY_DIR}/ISO_FORTRAN_ENV.mod ${CMAKE_CURRENT_BINARY_DIR}/IEEE_ARITHMETIC.mod DESTINATION ${PATH64_LIB_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib.cat DESTINATION ${PATH64_LIB_PATH})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib.msgs DESTINATION ${PATH64_LIB_PATH})
ENDIF(PATH64_ENABLE_FORTRAN)
